{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 357,
  "lineage": "8e0cc0a7-fc19-5489-4347-293875ae1bc2",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975050111160:loadbalancer/app/community-resource-map-free-alb/89bde7fce9bf6aa2",
            "arn_suffix": "app/community-resource-map-free-alb/89bde7fce9bf6aa2",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "community-resource-map-free-alb-661435681.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:975050111160:loadbalancer/app/community-resource-map-free-alb/89bde7fce9bf6aa2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "community-resource-map-free-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-023ce62c4e1bf5bd3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08b2c2b0a87b9d838"
              },
              {
                "subnet_id": "subnet-08f30bd8f84c70fb7"
              }
            ],
            "subnets": [
              "subnet-08b2c2b0a87b9d838",
              "subnet-08f30bd8f84c70fb7"
            ],
            "tags": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-alb",
              "Project": "community-resource-map"
            },
            "tags_all": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-alb",
              "Project": "community-resource-map"
            },
            "vpc_id": "vpc-08f0ac072707ca464",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975050111160:listener/app/community-resource-map-free-alb/89bde7fce9bf6aa2/1772af36c3e951ab",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975050111160:listener/app/community-resource-map-free-alb/89bde7fce9bf6aa2/1772af36c3e951ab",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:975050111160:loadbalancer/app/community-resource-map-free-alb/89bde7fce9bf6aa2",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.main",
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.frontend",
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975050111160:listener/app/community-resource-map-free-alb/89bde7fce9bf6aa2/8a1c98ba5a45e500",
            "certificate_arn": "arn:aws:acm:us-east-1:975050111160:certificate/d8c87c45-c272-463f-a79f-3a873a5c5471",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975050111160:targetgroup/crm-free-frontend-tg/c41ebaa2d51801c3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975050111160:listener/app/community-resource-map-free-alb/89bde7fce9bf6aa2/8a1c98ba5a45e500",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:975050111160:loadbalancer/app/community-resource-map-free-alb/89bde7fce9bf6aa2",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.main",
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.frontend",
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975050111160:targetgroup/crm-free-api-tg/2bc4c65bc9169108",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975050111160:listener-rule/app/community-resource-map-free-alb/89bde7fce9bf6aa2/8a1c98ba5a45e500/1f9b9342f2d74db9",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/actuator/*",
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975050111160:listener-rule/app/community-resource-map-free-alb/89bde7fce9bf6aa2/8a1c98ba5a45e500/1f9b9342f2d74db9",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:975050111160:listener/app/community-resource-map-free-alb/89bde7fce9bf6aa2/8a1c98ba5a45e500",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.main",
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_listener.https",
            "module.alb.aws_lb_target_group.api",
            "module.alb.aws_lb_target_group.frontend",
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975050111160:targetgroup/crm-free-api-tg/2bc4c65bc9169108",
            "arn_suffix": "targetgroup/crm-free-api-tg/2bc4c65bc9169108",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975050111160:targetgroup/crm-free-api-tg/2bc4c65bc9169108",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:975050111160:loadbalancer/app/community-resource-map-free-alb/89bde7fce9bf6aa2"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "crm-free-api-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-api-tg",
              "Project": "community-resource-map"
            },
            "tags_all": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-api-tg",
              "Project": "community-resource-map"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08f0ac072707ca464"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975050111160:targetgroup/crm-free-frontend-tg/c41ebaa2d51801c3",
            "arn_suffix": "targetgroup/crm-free-frontend-tg/c41ebaa2d51801c3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975050111160:targetgroup/crm-free-frontend-tg/c41ebaa2d51801c3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:975050111160:loadbalancer/app/community-resource-map-free-alb/89bde7fce9bf6aa2"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "crm-free-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-frontend-tg",
              "Project": "community-resource-map"
            },
            "tags_all": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-frontend-tg",
              "Project": "community-resource-map"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08f0ac072707ca464"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050111160:security-group/sg-023ce62c4e1bf5bd3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023ce62c4e1bf5bd3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "community-resource-map-free-alb-20250920181223068100000007",
            "name_prefix": "community-resource-map-free-alb-",
            "owner_id": "975050111160",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-alb-sg",
              "Project": "community-resource-map"
            },
            "tags_all": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-alb-sg",
              "Project": "community-resource-map"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f0ac072707ca464"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050111160:security-group/sg-0da33bd792a4aa68f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da33bd792a4aa68f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-023ce62c4e1bf5bd3"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-023ce62c4e1bf5bd3"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "community-resource-map-free-ecs-tasks-2025092018122650390000000b",
            "name_prefix": "community-resource-map-free-ecs-tasks-",
            "owner_id": "975050111160",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-ecs-tasks-sg",
              "Project": "community-resource-map"
            },
            "tags_all": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-ecs-tasks-sg",
              "Project": "community-resource-map"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f0ac072707ca464"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050111160:security-group/sg-0f941b0d59324877d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f941b0d59324877d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "community-resource-map-free-rds-20250920181223174700000008",
            "name_prefix": "community-resource-map-free-rds-",
            "owner_id": "975050111160",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-rds-sg",
              "Project": "community-resource-map"
            },
            "tags_all": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-rds-sg",
              "Project": "community-resource-map"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f0ac072707ca464"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050111160:network-acl/acl-0476d4438d6376a52",
            "default_network_acl_id": "acl-0476d4438d6376a52",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0476d4438d6376a52",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "975050111160",
            "subnet_ids": [
              "subnet-08b2c2b0a87b9d838",
              "subnet-08c73d712d534061e",
              "subnet-08f30bd8f84c70fb7",
              "subnet-0b21e1232bc3f7d1f"
            ],
            "tags": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc-default",
              "Project": "community-resource-map"
            },
            "tags_all": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc-default",
              "Project": "community-resource-map"
            },
            "vpc_id": "vpc-08f0ac072707ca464"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050111160:route-table/rtb-0a2e9d00b25562939",
            "default_route_table_id": "rtb-0a2e9d00b25562939",
            "id": "rtb-0a2e9d00b25562939",
            "owner_id": "975050111160",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc-default",
              "Project": "community-resource-map"
            },
            "tags_all": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc-default",
              "Project": "community-resource-map"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-08f0ac072707ca464"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050111160:security-group/sg-0f9668771a7555388",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f9668771a7555388",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "975050111160",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc-default",
              "Project": "community-resource-map"
            },
            "tags_all": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc-default",
              "Project": "community-resource-map"
            },
            "vpc_id": "vpc-08f0ac072707ca464"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-099f847033ab6adcd",
            "arn": "arn:aws:ec2:us-east-1:975050111160:elastic-ip/eipalloc-099f847033ab6adcd",
            "association_id": "eipassoc-079f3a65cd31feef4",
            "domain": "vpc",
            "id": "eipalloc-099f847033ab6adcd",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e49daf2b377d2a4a",
            "private_dns": "ip-10-0-10-33.ec2.internal",
            "private_ip": "10.0.10.33",
            "public_dns": "ec2-100-24-190-56.compute-1.amazonaws.com",
            "public_ip": "100.24.190.56",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc-us-east-1a",
              "Project": "community-resource-map"
            },
            "tags_all": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc-us-east-1a",
              "Project": "community-resource-map"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0146d5af83df5ebd6",
            "arn": "arn:aws:ec2:us-east-1:975050111160:elastic-ip/eipalloc-0146d5af83df5ebd6",
            "association_id": "eipassoc-075ec16c731f5051a",
            "domain": "vpc",
            "id": "eipalloc-0146d5af83df5ebd6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-042f5acb92a8b5d05",
            "private_dns": "ip-10-0-11-168.ec2.internal",
            "private_ip": "10.0.11.168",
            "public_dns": "ec2-52-3-4-210.compute-1.amazonaws.com",
            "public_ip": "52.3.4.210",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc-us-east-1b",
              "Project": "community-resource-map"
            },
            "tags_all": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc-us-east-1b",
              "Project": "community-resource-map"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050111160:internet-gateway/igw-08bb69f6b655c92b3",
            "id": "igw-08bb69f6b655c92b3",
            "owner_id": "975050111160",
            "tags": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc",
              "Project": "community-resource-map"
            },
            "tags_all": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc",
              "Project": "community-resource-map"
            },
            "vpc_id": "vpc-08f0ac072707ca464"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-099f847033ab6adcd",
            "association_id": "eipassoc-079f3a65cd31feef4",
            "connectivity_type": "public",
            "id": "nat-0cee7abec4f7e778d",
            "network_interface_id": "eni-0e49daf2b377d2a4a",
            "private_ip": "10.0.10.33",
            "public_ip": "100.24.190.56",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08f30bd8f84c70fb7",
            "tags": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc-us-east-1a",
              "Project": "community-resource-map"
            },
            "tags_all": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc-us-east-1a",
              "Project": "community-resource-map"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0146d5af83df5ebd6",
            "association_id": "eipassoc-075ec16c731f5051a",
            "connectivity_type": "public",
            "id": "nat-0083e54fbb645213f",
            "network_interface_id": "eni-042f5acb92a8b5d05",
            "private_ip": "10.0.11.168",
            "public_ip": "52.3.4.210",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08b2c2b0a87b9d838",
            "tags": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc-us-east-1b",
              "Project": "community-resource-map"
            },
            "tags_all": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc-us-east-1b",
              "Project": "community-resource-map"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0607192b9886c88211080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cee7abec4f7e778d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0607192b9886c8821",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b0677729ce1b84491080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0083e54fbb645213f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b0677729ce1b8449",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08bb69f6b655c92b3",
            "id": "r-rtb-0a962d178767a30e71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a962d178767a30e7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050111160:route-table/rtb-0607192b9886c8821",
            "id": "rtb-0607192b9886c8821",
            "owner_id": "975050111160",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cee7abec4f7e778d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc-private-us-east-1a",
              "Project": "community-resource-map"
            },
            "tags_all": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc-private-us-east-1a",
              "Project": "community-resource-map"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f0ac072707ca464"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050111160:route-table/rtb-0b0677729ce1b8449",
            "id": "rtb-0b0677729ce1b8449",
            "owner_id": "975050111160",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0083e54fbb645213f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc-private-us-east-1b",
              "Project": "community-resource-map"
            },
            "tags_all": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc-private-us-east-1b",
              "Project": "community-resource-map"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f0ac072707ca464"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050111160:route-table/rtb-0a962d178767a30e7",
            "id": "rtb-0a962d178767a30e7",
            "owner_id": "975050111160",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08bb69f6b655c92b3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc-public",
              "Project": "community-resource-map"
            },
            "tags_all": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc-public",
              "Project": "community-resource-map"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f0ac072707ca464"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075ceada434d7b4f4",
            "route_table_id": "rtb-0607192b9886c8821",
            "subnet_id": "subnet-0b21e1232bc3f7d1f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c9e850403d57aae",
            "route_table_id": "rtb-0b0677729ce1b8449",
            "subnet_id": "subnet-08c73d712d534061e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e09a1314b5d11611",
            "route_table_id": "rtb-0a962d178767a30e7",
            "subnet_id": "subnet-08f30bd8f84c70fb7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d07c6f49d0e8e2b",
            "route_table_id": "rtb-0a962d178767a30e7",
            "subnet_id": "subnet-08b2c2b0a87b9d838"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050111160:subnet/subnet-0b21e1232bc3f7d1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b21e1232bc3f7d1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050111160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc-private-us-east-1a",
              "Project": "community-resource-map"
            },
            "tags_all": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc-private-us-east-1a",
              "Project": "community-resource-map"
            },
            "vpc_id": "vpc-08f0ac072707ca464"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050111160:subnet/subnet-08c73d712d534061e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c73d712d534061e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050111160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc-private-us-east-1b",
              "Project": "community-resource-map"
            },
            "tags_all": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc-private-us-east-1b",
              "Project": "community-resource-map"
            },
            "vpc_id": "vpc-08f0ac072707ca464"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050111160:subnet/subnet-08f30bd8f84c70fb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f30bd8f84c70fb7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050111160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc-public-us-east-1a",
              "Project": "community-resource-map"
            },
            "tags_all": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc-public-us-east-1a",
              "Project": "community-resource-map"
            },
            "vpc_id": "vpc-08f0ac072707ca464"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050111160:subnet/subnet-08b2c2b0a87b9d838",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b2c2b0a87b9d838",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050111160",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc-public-us-east-1b",
              "Project": "community-resource-map"
            },
            "tags_all": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc-public-us-east-1b",
              "Project": "community-resource-map"
            },
            "vpc_id": "vpc-08f0ac072707ca464"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050111160:vpc/vpc-08f0ac072707ca464",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0476d4438d6376a52",
            "default_route_table_id": "rtb-0a2e9d00b25562939",
            "default_security_group_id": "sg-0f9668771a7555388",
            "dhcp_options_id": "dopt-0f2cc2f00382ec217",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08f0ac072707ca464",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a2e9d00b25562939",
            "owner_id": "975050111160",
            "tags": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc",
              "Project": "community-resource-map"
            },
            "tags_all": {
              "Environment": "free",
              "ManagedBy": "terraform",
              "Name": "community-resource-map-free-vpc",
              "Project": "community-resource-map"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}